--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,8 @@ hs_err_pid*
 # End of https://www.gitignore.io/api/java,intellij
 
 /out
+SSFiler\.properties
+
+directory_list\.txt
+
+scripts\.sh
